Add a block to define the blog post title.

--- a/struct/templates/layouts/refli/blog-post.pug
+++ b/struct/templates/layouts/refli/blog-post.pug
@@ -10,7 +10,7 @@ html(dir="ltr", lang="en")
         link(rel="stylesheet", href="/static/css/struct/layouts.css")
         link(rel="stylesheet", href="/static/css/struct/misc.css")
         link(rel="canonical", href="https://refli.be/fr/blog/2024/01/12/introducing-refli")
-        title Introducing Refli
+        block title
     body.u-container-vertical
         header
             .u-container
