--- a/struct/templates/prototypes/refli/blog-post-introducing-refli.pug
+++ b/struct/templates/prototypes/refli/blog-post-introducing-refli.pug
@@ -1,5 +1,8 @@
 extends ../../layouts/refli/blog-post
 
+block title
+    title Introducing Refli
+
 block content
     .c-content.flow-all.limit-42em
         h1 Introducing Refli
