--- a/struct/templates/layouts/refli/blog-post.pug
+++ b/struct/templates/layouts/refli/blog-post.pug
@@ -3,12 +3,7 @@ html(dir="ltr", lang="en")
     head
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1")
-        link(rel="stylesheet", href="/static/css/struct/foundations.css")
-        link(rel="stylesheet", href="/static/css/struct/ibm-plex.css")
-        link(rel="stylesheet", href="/static/css/struct/fonts.css")
-        link(rel="stylesheet", href="/static/css/struct/scale.css")
-        link(rel="stylesheet", href="/static/css/struct/layouts.css")
-        link(rel="stylesheet", href="/static/css/struct/misc.css")
+        link(rel="stylesheet", href="/static/css/struct.css")
         link(rel="canonical", href="https://refli.be/fr/blog/2024/01/12/introducing-refli")
         block title
     body.u-container-vertical
