Add french translation.

--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -94,6 +94,10 @@ html(dir="ltr", lang="en")
                         a(href="/prototypes/refli/describe.html") Salary computation form
                     li
                         a(href="/prototypes/refli/blog-post-introducing-refli.html") Blog post
+                        |
+                        | (
+                        a(href="/prototypes/refli/blog-post-introducing-refli-fr.html") Fr
+                        | )
                 h3 Lex Iterata
                 p An attempt at an alternative rendition of the <a href="https://www.ejustice.just.fgov.be/">official Belgian journal</a>.
                 ul
