Add dutch translation.

--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -97,6 +97,9 @@ html(dir="ltr", lang="en")
                         |
                         | (
                         a(href="/prototypes/refli/blog-post-introducing-refli-fr.html") Fr
+                        | ,
+                        |
+                        a(href="/prototypes/refli/blog-post-introducing-refli-nl.html") Nl
                         | )
                 h3 Lex Iterata
                 p An attempt at an alternative rendition of the <a href="https://www.ejustice.just.fgov.be/">official Belgian journal</a>.
