--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -93,6 +93,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/prototypes/refli/describe.html") Salary computation form
                     li
+                        a(href="/prototypes/refli/blog-index.html") Blog index
+                    li
                         a(href="/prototypes/refli/blog-post-introducing-refli.html") Blog post
                         |
                         | (
