Use the normal Refli page layout.

--- a/struct/templates/prototypes/refli/blog-index.pug
+++ b/struct/templates/prototypes/refli/blog-index.pug
@@ -1,5 +1,7 @@
-extends ../../layouts/refli/blog-post
-include ../../includes/mixins/icons.pug
+extends ../../layouts/refli/page
+
+block canonical
+    link(rel="canonical", href="https://refli.be/en/blog")
 
 block title
     title Découvrons Refli
