--- a/struct/templates/prototypes/refli/blog-post-introducing-refli-nl.pug
+++ b/struct/templates/prototypes/refli/blog-post-introducing-refli-nl.pug
@@ -1,4 +1,7 @@
-extends ../../layouts/refli/blog-post
+extends ../../layouts/refli/page
+
+block canonical
+    link(rel="canonical", href="https://refli.be/nl/blog/2024/01/12/introducing-refli")
 
 block title
     title Refli introduceren
