Remove bullet points in the block navigation links

--- a/struct/templates/layouts/refli/page.pug
+++ b/struct/templates/layouts/refli/page.pug
@@ -31,7 +31,7 @@ html(dir="ltr", lang="en")
                 .switcher
                     .c-content.flow
                         h4 Refli
-                        ul
+                        ul.no-disc
                             li
                                 a(href="/about.html") About
                             li
@@ -42,9 +42,11 @@ html(dir="ltr", lang="en")
                                 a(href="/disclaimer.html") Disclaimer
                             li
                                 a(href="/documentation.html") Documentation
+                            li
+                                a(href="/prototypes/refli/motherboard-index.html") Lex Iterata
                     .c-content.flow
                         h4 Social security contributions
-                        ul
+                        ul.no-disc
                             li
                                 a(href="#") Personal contributions
                             li
@@ -53,7 +55,7 @@ html(dir="ltr", lang="en")
                                 a(href="#") Special contribution
                     .c-content.flow
                         h4 Professional tax withholding
-                        ul
+                        ul.no-disc
                             li
                                 a(href="#") Fixed professional fees
                             li
@@ -61,7 +63,7 @@ html(dir="ltr", lang="en")
                             li
                                 a(href="#") Reductions for dependant children
                         h4 Rounding method
-                        ul
+                        ul.no-disc
                             li
                                 a(href="#") Rounding
                             li
