--- a/struct/scss/struct/misc.scss
+++ b/struct/scss/struct/misc.scss
@@ -74,7 +74,11 @@ hr {
 .c-content h4 {font-size: var(--step-b-1);}
 .c-content p {font-size: var(--step-b-0); line-height: 1.5em;}
 .c-content p small {font-size: var(--step-b--1); line-height: 1.5em;}
-.c-content ul {list-style: disc; padding-left: 3rem;}
+.c-content ul {
+  list-style: disc;
+  padding-left: 3rem;
+  &.no-disc {list-style: none; padding-left: 0;}
+}
 .c-content ul li {line-height: 1.5em;}
 .type-scale-d h1 {font-size: var(--step-d-4);}
 .type-scale-d h2 {font-size: var(--step-d-3);}
