--- a/struct/templates/layouts/refli/page.pug
+++ b/struct/templates/layouts/refli/page.pug
@@ -44,6 +44,14 @@ html(dir="ltr", lang="en")
                                 a(href="/documentation.html") Documentation
                             li
                                 a(href="/prototypes/refli/motherboard-index.html") Lex Iterata
+                        hr
+                        ul.no-disc.horizontal
+                            li
+                                a(href="#") EN
+                            li
+                                a(href="#") FR
+                            li
+                                a(href="#") NL
                     .c-content.flow
                         h4 Social security contributions
                         ul.no-disc
