--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -103,6 +103,8 @@ html(dir="ltr", lang="en")
                         |
                         a(href="/prototypes/refli/blog-post-introducing-refli-nl.html") Nl
                         | )
+                    li
+                        a(href="/partials/refli/en/blog/introducing-refli.html") Blog post partial
                 h3 Lex Iterata
                 p An attempt at an alternative rendition of the <a href="https://www.ejustice.just.fgov.be/">official Belgian journal</a>.
                 ul
